# leap_initialisation

./: .gitignore  AGENTS.md  README.md  Untitled-2.md  _run_apec_preflight_after_aggregate.py  pyproject.toml
codebase/: [WARN] Analysis-input config mapping mis.md  __init__.py  aggregated_demand_workflow.py  baseline_seed_comparison_workflow.py  electricity_heat_interim_workflow.py  hydrogen_transformation_workflow.py  minor_demand_workflow.py  other_loss_own_use_proxy_workflow.py  outlook_mapping_maintenance_workflow.py  refining_workflow.py  supply_reconciliation_allocation.py  supply_reconciliation_balance_tables.py  supply_reconciliation_config.py  supply_reconciliation_history.py  supply_reconciliation_results.py  supply_reconciliation_utils.py  supply_reconciliation_workflow.py  supply_workflow.py  transfers_workflow.py  transformation_entry.py  transformation_workflow.py
config/: 88B2F820  ED114820  LEAP_API_helpers.py  LEAP_API_utilities.py  leap settings workbook.xlsx  leap_export_workbook_mappings.xlsx  leap_transformation_losses_own_use_config.py  master_config.xlsx  supply_reconciliation_config.json
data/: README.md
docs/: balance_demand_conservation_check.md  balance_demand_mapping_fixes_prompt.md  baseline_seed_rule_inventory.md  canonical_mapping_migration_notes.md  check_registry.md  compressed_results_update_preflight_prompt.md  demand_conservation_lineage_feasibility_prompt.md  demand_conservation_lineage_leap_mappings_planning_prompt.md  demand_conservation_realignment_prompt.md  full_model_export_retirement_scope.md  leap_export_readiness_plan.md  (+10 more)
(+302 files in other folders)
